Bug 499447.  Don't restart our interrupted reflow until some time passes, to give system event processing a fair shot.  r=bzbarsky